style guide update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0019/1862011/default-hero-image.jpg
 ---
 
-<p><a href="style-guide/style-guide-layout.html">Style Guide</a></p>
+<p><a href="style-guide/">Style Guide</a></p>
 
 <p><a href="home-page.html">Home Page</a></p>
 
