--- a/study-with-us/become-a-teacher.html
+++ b/study-with-us/become-a-teacher.html
@@ -8,7 +8,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
 
 <div class="article">
     <figure class="right">
-        <img src="http://placehold.it/270x174" alt="">
+        <img src="/img/become-a-teacher-photo.png" alt="">
     </figure>
     <p class="intro">The Master of Teaching is for graduates from any discipline who want to become teachers.</p>
     <p>Our innovative curriculum brings together theory and practice in a way that will give you powerful insights into children and young people, and how they learn.</p>
@@ -50,9 +50,13 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
         <h2>Courses to become a teacher</h2>
     </div>
     <div class="right">
-        <ul class="course-list">
+        <ul class="course-list extra">
             <li>
-                <a href="./?a=602581" data-courselevel="master"><small>Master of</small> Teaching <span>(Early Childhood)</span></a>
+                <a href="./?a=602581" data-courselevel="master">
+                    <img src="/img/early-chldhood.jpg" alt="">    
+                    <small>Master of</small> Teaching <span>(Early Childhood)</span>
+                    <p>The course covers children aged 0-8 years, reflecting the Victorian Government's early childhood strategy.</p>
+                </a>
             </li>
             <li>
                 <a href="./?a=610514" data-courselevel="master"><small>Master of</small> Teaching <span>(Primary)</span></a>
@@ -66,3 +70,22 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
         </ul>
     </div>
 </section>
+<hr>
+
+<div class="article">
+    <div class="promo alt">
+        <figure class="left">
+            <img src="/img/KIT-graphic.png" alt="">
+        </figure>
+        <h2>Stay informed</h2>
+        <p>Our Keep in Touch email newsletter is a great way to stay informed about important dates and stories, events and news updates.</p>
+        <a class="button" href="">Subscribe to Keep in Touch newsletter</a>
+    </div>
+</div>
+<div class="side-bar">
+    <div class="promo">
+        <h2>Want to know more?</h2>
+        <p>Get in touch online or by phone and we can answer any questions you have.</p>
+        <a class="button" href="">Enquire online</a>
+    </div>
+</div>
