--- a/style-guide/style-guide-components.html
+++ b/style-guide/style-guide-components.html
@@ -22,8 +22,19 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
 
 <h2 id="buttons" class="style-guide">Buttons</h2>
 
-<a class="button">Basic button</a>
-<a class="button--go">Call to action button</a>
+<a class="button" href="">Basic button</a>
+<a class="button--go" href="">Call to action button</a>
+
+<h3 class="style-guide">How to use</h3>
+<div>
+    <pre>
+        <h4>Code</h4>
+        <code>
+&lt;a class=&quot;button&quot; href=&quot;URL&quot;&gt;Basic button&lt;/a&gt;
+&lt;a class=&quot;button--go&quot; href=&quot;URL&quot;&gt;Call to action button&lt;/a&gt;
+        </code>
+    </pre>
+</div>
 
 <h2 id="tables" class="style-guide">Tables</h2>
 
@@ -187,7 +198,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
 <p>All images should be placed within a &lt;figure&gt; tag.</p>
                 
 <div class="article">
-  <figure class="full-width">
+  <figure>
     <a href="#"><img src="http://placehold.it/745x373" alt="Dog"></a>
     <figcaption>This is a caption</figcaption>
   </figure>
@@ -204,7 +215,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
     <pre>
         <h4>Code</h4>
         <code>
-&lt;figure class=&quot;full-width&quot;&gt;
+&lt;figure&gt;
     &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://placehold.it/745x373&quot; alt=&quot;Dog&quot;&gt;&lt;/a&gt;
     &lt;figcaption&gt;This is a caption&lt;/figcaption&gt;
 &lt;/figure&gt;
