course page updates

--- a/study-with-us/become-a-teacher.html
+++ b/study-with-us/become-a-teacher.html
@@ -59,13 +59,25 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
                 </a>
             </li>
             <li>
-                <a href="./?a=610514" data-courselevel="master"><small>Master of</small> Teaching <span>(Primary)</span></a>
+                <a href="./?a=610514" data-courselevel="master">
+                    <img src="/img/primary.jpg" alt="">
+                    <small>Master of</small> Teaching <span>(Primary)</span>
+                    <p>Will qualify you to teach across all primary years as a generalist teacher, with specialist knowledge in literacy and numeracy education.</p>
+                </a>
             </li>
             <li>
-                <a href="./?a=610637" data-courselevel="master"><small>Master of</small> Teaching <span>(Secondary)</span></a>
+                <a href="./?a=610637" data-courselevel="master">
+                    <img src="/img/secondary.jpg" alt="">
+                    <small>Master of</small> Teaching <span>(Secondary)</span>
+                    <p>Prepares you to be a highly effective teacher in your discipline.</p>
+                </a>
             </li>
             <li>
-                <a href="./?a=1101866" data-courselevel="master"><small>Master of</small> Teaching <span>(Internship)</span></a>
+                <a href="./?a=1101866" data-courselevel="master">
+                    <img src="/img/internship.jpg" alt="">
+                    <small>Master of</small> Teaching <span>(Internship)</span>
+                    <p>In the Master of Teaching (Secondary) Internship you get paid to teach in a secondary school while completing your teaching degree.</p>
+                </a>
             </li>
         </ul>
     </div>
@@ -86,6 +98,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
     <div class="promo">
         <h2>Want to know more?</h2>
         <p>Get in touch online or by phone and we can answer any questions you have.</p>
+        <br>
         <a class="button" href="">Enquire online</a>
     </div>
 </div>
