fix courses filter etc

--- a/study-with-us/courses/evaluation.html
+++ b/study-with-us/courses/evaluation.html
@@ -14,9 +14,7 @@ heroImage: http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stud
     <p>
         Delivered by the Centre for Program Evaluation, these courses are taught by leading academics who bring with them a wealth of experience across sectors and continents.
     </p>
-    <h2>
-  Entry requirements
-</h2>
+    <h2>Entry requirements</h2>
     <ul>
         <li>
             A four-year undergraduate degree; or
@@ -99,9 +97,7 @@ heroImage: http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stud
         </div>
     </div>
 
-    <h2>
-    Outcomes
-</h2>
+    <h2>Outcomes</h2>
     <p><strong>These courses enable you to:</strong></p>
     <ul>
         <li>demonstrate advanced knowledge and understanding of evaluation theory and practice</li>
@@ -111,45 +107,43 @@ heroImage: http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stud
     </ul>
 
     <h2>How to apply</h2>
+    <p>The University of Melbourne accepts online applications year round from both domestic and international applicants. International applicants can apply online or in person through our <a href="http://futurestudents.unimelb.edu.au/contact/overseas_representatives">overseas representatives</a>.</p>
+    <h3>Application dates</h3>
+    <h4>Start year intake</h4>
 
-    <div id="new_content_container_1987148">
-        <p>The University of Melbourne accepts online applications year round from both domestic and international applicants. International applicants can apply online or in person through our <a href="http://futurestudents.unimelb.edu.au/contact/overseas_representatives">overseas representatives</a>.</p>
-        <h3>Application dates</h3>
-        <h4>Start year intake</h4>
-        
-        <div class="col-2max comparison">
-            <div>
-                    <h5>Domestic</h5>
-                    <p>Round 1 close: 31 October</p>
-                    <p>Round 2 close: 15 December</p>
-                    <p>Round 3: 31 January</p>
-            </div>
-            <div>
-                    <h5>International</h5>
-                    <p>Round 1: 31 July</p>
-                    <p>Round 2: 15 December</p>
-            </div>
+    <div class="col-2max comparison">
+        <div>
+                <h5>Domestic</h5>
+                <p>Round 1 close: 31 October</p>
+                <p>Round 2 close: 15 December</p>
+                <p>Round 3: 31 January</p>
         </div>
-        
-        <h3>Prepare your application</h3>
-        <p>You may be required to provide supporting documentation to demonstrate that you meet the course entry requirements. Supporting documentation may include:</p>
-        <ul>
-            <li>Previous academic transcripts</li>
-            <li>Evidence of degree completion (testamur)</li>
-            <li>Evidence of English language proficiency</li>
-            <li>Curriculum Vitae</li>
-            <li>Statement of intent (check course entry requirements)</li>
-            <li>Referee reports (Master of Educational Psychology only)</li>
-        </ul>
-        <h3>Application process</h3>
-        <p>Submit an <a href="https://sis.unimelb.edu.au/onlineapplication">online course application</a> directly to the University of Melbourne</p>
-        <h3>Outcome</h3>
-        <p>Direct applications will be assessed on a rolling basis throughout the year. You can track the progress of your application by logging back into your online application.</p>
-        <p>As soon as the outcome of your application has been determined, you will be notified by email.</p>
+        <div>
+                <h5>International</h5>
+                <p>Round 1: 31 July</p>
+                <p>Round 2: 15 December</p>
+        </div>
     </div>
+
+    <h3>Prepare your application</h3>
+    <p>You may be required to provide supporting documentation to demonstrate that you meet the course entry requirements. Supporting documentation may include:</p>
+    <ul>
+        <li>Previous academic transcripts</li>
+        <li>Evidence of degree completion (testamur)</li>
+        <li>Evidence of English language proficiency</li>
+        <li>Curriculum Vitae</li>
+        <li>Statement of intent (check course entry requirements)</li>
+        <li>Referee reports (Master of Educational Psychology only)</li>
+    </ul>
+    <h3>Application process</h3>
+    <p>Submit an <a href="https://sis.unimelb.edu.au/onlineapplication">online course application</a> directly to the University of Melbourne</p>
+    <h3>Outcome</h3>
+    <p>Direct applications will be assessed on a rolling basis throughout the year. You can track the progress of your application by logging back into your online application.</p>
+    <p>As soon as the outcome of your application has been determined, you will be notified by email.</p>
+
 </div>
 <div class="side-bar" id="new_content_container_1767369">
-    <p><a class="button" href="http://education.unimelb.edu.au/contact_us/enquiry-forms/enquiry-evaluation">Have an enquiry?</a><a class="download button" href="">Course brochure (106kb PDF)</a></p>
+    <p class="flex"><a class="button" href="http://education.unimelb.edu.au/contact_us/enquiry-forms/enquiry-evaluation">Have an enquiry?</a> <a class="download button" href="">Course brochure (106kb PDF)</a></p>
     <div class="well">
         <figure><img src="http://education.unimelb.edu.au/__data/assets/image/0004/1488604/Evaluation_Trish-OConnor_cropped.jpg" alt="Trish, Master of Evalutaion Student" /></figure>
         <blockquote>
