--- a/style-guide/style-guide-components.html
+++ b/style-guide/style-guide-components.html
@@ -10,7 +10,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
 
 {%include  style-guide-nav.html %}
 
-<p><a href="#buttons">Buttons</a> |
+<p style="max-width: 100%;"><a href="#buttons">Buttons</a> |
 <a href="#tables">Tables</a> |
 <a href="#images">Images</a> |
 <a href="#video">Video</a> |
@@ -18,7 +18,9 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
 <a href="#tabs">Tabs</a> |
 <a href="#accordions">Acoordions</a> |
 <a href="#readmore">Read more</a> |
-<a href="#staffprofile">Staff profile</a></p>
+<a href="#staffprofile">Staff profile</a> |
+<a href="#comparison">Comparison</a> |
+<a href="#alert">Alert</a></p>
 
 <h2 id="buttons" class="style-guide">Buttons</h2>
 
@@ -502,8 +504,6 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
     </pre>
 </div>
 
-</div>
-
 
 <h2 id="accordions" class="style-guide">Accordions</h2>
 
@@ -713,6 +713,81 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
         &lt;/div&gt;
     &lt;/div&gt;
 &lt;/div&gt;
+        </code>
+    </pre>
+</div>
+
+<h2 id="comparison" class="style-guide">Comparison</h2>
+<p>Use the comparison component when you have two sets of the same type information but with different values for two categories -  e.g. two different audiences</p>
+<div class="article"> 
+<div class="col-2max comparison">
+    <div>
+            <h5>Domestic</h5>
+            <p>Round 1 close: 31 October</p>
+            <p>Round 2 close: 15 December</p>
+            <p>Round 3: 31 January</p>
+    </div>
+    <div>
+            <h5>International</h5>
+            <p>Round 1: 31 July</p>
+            <p>Round 2: 15 December</p>
+    </div>
+</div>
+</div>
+<div class="side-bar"></div>
+<h3 class="style-guide">How to use</h3>
+<p>H5 is example only, use the approriate heading level for your page</p>
+<div>
+    <pre>
+        <h4>Code</h4>
+        <code>
+&lt;div class=&quot;col-2max comparison&quot;&gt;
+    &lt;div&gt;
+            &lt;h5&gt;Domestic&lt;/h5&gt;
+            &lt;p&gt;Round 1 close: 31 October&lt;/p&gt;
+            &lt;p&gt;Round 2 close: 15 December&lt;/p&gt;
+            &lt;p&gt;Round 3: 31 January&lt;/p&gt;
+    &lt;/div&gt;
+    &lt;div&gt;
+            &lt;h5&gt;International&lt;/h5&gt;
+            &lt;p&gt;Round 1: 31 July&lt;/p&gt;
+            &lt;p&gt;Round 2: 15 December&lt;/p&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
+        </code>
+    </pre>
+</div>
+
+<h2 id="alert" class="style-guide">Alert</h2>
+<div class="alert">
+    <p>Looking for Breadth subjects for current students?</p>
+    <a class="button--go" href="">Browse breadth subjects</a>
+</div>
+<h3 class="style-guide">How to use</h3>
+<p>H5 is example only, use the approriate heading level for your page</p>
+<div>
+    <pre>
+        <h4>Code</h4>
+        <code>
+&lt;div class=&quot;alert&quot;&gt;
+    &lt;p&gt;Looking for Breadth subjects for current students?&lt;/p&gt;
+    &lt;a class=&quot;button--go&quot; href=&quot;&quot;&gt;Browse breadth subjects&lt;/a&gt;
+&lt;/div&gt;
+        </code>
+    </pre>
+</div>
+
+<h2 id="cours-types" class="style-guide">Course types</h2>
+<h1>Education</h1>
+<p class="course-types"><span class="doctorate">Doctorate</span> <span class="masters">Masters</span> <span class="gradcert">Graduate Certificate</span> <span class="profcert">Professional Certificate</span></p>
+
+<h3 class="style-guide">How to use</h3>
+<p><b>For course pages:</b> place as first element on page in raw section, include only applicable levels.</p>
+<div>
+    <pre>
+        <h4>Code</h4>
+        <code>
+&lt;p class=&quot;course-types&quot;&gt;&lt;span class=&quot;doctorate&quot;&gt;Doctorate&lt;/span&gt; &lt;span class=&quot;masters&quot;&gt;Masters&lt;/span&gt; &lt;span class=&quot;gradcert&quot;&gt;Graduate Certificate&lt;/span&gt; &lt;span class=&quot;profcert&quot;&gt;Professional Certificate&lt;/span&gt;&lt;/p&gt;
         </code>
     </pre>
 </div>
