--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0019/1862011/def
 
 <p><a href="news-and-activities/events.html">Events</a></p>
 
-<p><a href="study-with-us/courses.html">Courses</a></p>
+<p><a href="study-with-us/courses/">Courses</a></p>
 
 <p><a href="study-with-us/courses/evaluation.html">Sample course page</a></p>
