--- a/study-with-us/courses/index.html
+++ b/study-with-us/courses/index.html
@@ -21,7 +21,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
         <div class="left">
             <h2>Become a teacher</h2>
             <p>Courses to become a teacher in Early Childhood, Primary and Secondary settings.</p>
-            <a class="button" href="become-a-teacher.html">Learn more</a>
+            <a class="button" href="../become-a-teacher.html">Learn more</a>
         </div>
         <div class="right">
             <ul class="course-list">
