new sample pages

--- a/study-with-us/courses/early-childhood-v2.html
+++ b/study-with-us/courses/early-childhood-v2.html
@@ -6,13 +6,23 @@ heroImage: http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stud
 ---
 <p class="course-types"><span class="masters">Masters</span></p>
 
-<div class="article" id="new_content_container_1755532">
+<div class="article">
     <figure class="right">
         <img src="/img/early-chldhood-300x200.jpg" alt="">
     </figure>
     <p class="intro">This course is designed with a new type of early childhood professional in mind &#8211; one who operates in a multi-disciplinary field involving care, education and health.</p>
     <p>The course covers children aged 0-8 years, reflecting the Victorian Government&#8217;s early childhood strategy.
     </p>
+</div>
+<div class="side-bar">
+    <p class="flex"><a class="button" href="http://education.unimelb.edu.au/contact_us/enquiry-forms/enquiry-master-of-teaching-ec">Have an enquiry?</a> <a class="download button" href="">Course brochure (106kb PDF)</a></p>
+
+    <div class="alert">
+        <p>Information sessions scheduled for Sept 2016</p>
+        <a class="button--go" href="">Find out more</a>
+    </div>
+</div>
+<div class="article">
     <!-- in-page-tabs -->
     <ul class="tabs" role="tablist">
         <li role="presentation">
@@ -161,21 +171,7 @@ heroImage: http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stud
 
 </div>
 
-<div class="side-bar" id="new_content_container_1755560">
-    <p class="flex"><a class="button" href="http://education.unimelb.edu.au/contact_us/enquiry-forms/enquiry-master-of-teaching-ec">Have an enquiry?</a> <a class="download button" href="">Course brochure (106kb PDF)</a></p>
-
-    <div class="alert">
-        <p>Information sessions scheduled for Sept 2016</p>
-        <a class="button--go" href="">Find out more</a>
-    </div>
-    
-    <div class="well">
-        <img src="http://education.unimelb.edu.au/__data/assets/image/0005/1497218/EARLY-CHILDHOOD-Kate-HardingeMA005_cropped.jpg" alt="Photo of Kate Hardinge, Master of Teaching (Early Childhood) candidate">
-        <blockquote>
-            <p>The clinical model that the Master of Teaching (Early Childhood) uses and the interwoven nature of the practice and theory really attracted me. This course has given me the skills to involve children in critical reflection of the learning program. I have confidence in myself and my own abilities, and I am looking forward to gaining employment, knowing I am very prepared to teach.</p>
-            <footer><cite>Kate Hardinge<br/>Master of Teaching (Early Childhood)</cite></footer>
-        </blockquote>
-    </div>
+<div class="side-bar">
 
     <div class="well">
         <h2>At a glance</h2>
@@ -222,7 +218,13 @@ heroImage: http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stud
         </table>
         <p>Learn more about <a href="http://education.unimelb.edu.au/study_with_us/scholarships_and_financial_support">Financial support</a></p>
     </div>
-
+    <div class="well">
+        <img src="http://education.unimelb.edu.au/__data/assets/image/0005/1497218/EARLY-CHILDHOOD-Kate-HardingeMA005_cropped.jpg" alt="Photo of Kate Hardinge, Master of Teaching (Early Childhood) candidate">
+        <blockquote>
+            <p>The clinical model that the Master of Teaching (Early Childhood) uses and the interwoven nature of the practice and theory really attracted me. This course has given me the skills to involve children in critical reflection of the learning program. I have confidence in myself and my own abilities, and I am looking forward to gaining employment, knowing I am very prepared to teach.</p>
+            <footer><cite>Kate Hardinge<br/>Master of Teaching (Early Childhood)</cite></footer>
+        </blockquote>
+    </div>
     <div class="promo alt">
         <h2>Stay informed</h2>
         <p>Our Keep in Touch email newsletter is a great way to stay informed about important dates and stories, events and news updates.</p>
