--- a/study-with-us/students/index-v2.html
+++ b/study-with-us/students/index-v2.html
@@ -6,24 +6,30 @@ bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/study-hero-image.jpg
 ---
 <div class="article">
-    <div class="col-2max">
+    <h2>Specific MGSE Student information</h2>
+    <div class="preview-vertical">
         <div>
-            <h2><a href="">Master of Teaching enrolment</a></h2>
+            <img src="http://placehold.it/185x185">
+            <h3><a href="#">Master of Teaching enrolment</a></h3>
             <p>How to accept your offer and complete your enrolment.</p>
         </div>
         <div>
-            <h2><a href="">Timetable and class registration</a></h2>
+            <img src="http://placehold.it/185x185">
+            <h3><a href="#">Timetable and class registration</a></h3>
             <p>For all MGSE courses.</p>
         </div>
         <div>
-            <h2><a href="">Assessment information and policies</a></h2>
+            <img src="http://placehold.it/185x185">
+            <h3><a href="#">Assessment information and policies</a></h3>
             <p>For all MGSE courses.</p>
         </div>
         <div>
-            <h2><a href="">Study Breadth in Education</a></h2>
+            <img src="http://placehold.it/185x185">
+            <h3><a href="#">Study Breadth in Education</a></h3>
             <p>MGSE offers a broad range of breadth subjects.</p>
         </div>
     </div>
+
 </div>
 <div class="side-bar">
     <div class="well">
