more study with us updates

--- a/index.html
+++ b/index.html
@@ -18,4 +18,8 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0019/1862011/def
 
 <p><a href="study-with-us/courses/">Courses</a></p>
 
-<p><a href="study-with-us/courses/evaluation.html">Sample course page</a></p>
+<p><a href="study-with-us/courses/become-a-teacher.html">Become a teacher page</a></p>
+
+<p><a href="study-with-us/courses/early-childhood.html">Sample course page - Early childhood</a></p>
+
+<p><a href="study-with-us/courses/evaluation.html">Sample course page - Evaluation</a></p>
