--- a/study-with-us/courses/evaluation.html
+++ b/study-with-us/courses/evaluation.html
@@ -8,12 +8,16 @@ heroImage: http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stud
 ---
 <p class="course-types"><span class="doctorate">Doctorate</span> <span class="masters">Masters</span> <span class="gradcert">Graduate Certificate</span> <span class="profcert">Professional Certificate</span></p>
 <div class="article">
+    <figure class="right">
+        <img src="/img/Master-of-Evaluation-front-cover.jpg" alt="">
+    </figure>
     <p class="intro">
         The only programs of their kind in Australasia, these courses will give you specialist evaluation skills that you can apply in your current field and beyond including the public sector, health, welfare, education, not-for-profit and research, with the flexible option of studying online.
     </p>
     <p>
         Delivered by the Centre for Program Evaluation, these courses are taught by leading academics who bring with them a wealth of experience across sectors and continents.
     </p>
+    <p class="course-ctas"><a class="button" href="http://education.unimelb.edu.au/contact_us/enquiry-forms/enquiry-evaluation">Have an enquiry?</a> <a class="download button" href="">Course brochure (106kb PDF)</a></p>
     <h2>Entry requirements</h2>
     <ul>
         <li>
@@ -33,9 +37,6 @@ heroImage: http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stud
         All students must meet <a href="http://futurestudents.unimelb.edu.au/admissions/entry-requirements/language-requirements" rel="external">English language requirements.</a>
     </p>
     <h2>Course structure</h2>
-
-
-
     <ul class="tabs" role="tablist">
 
         <li role="presentation">
@@ -143,15 +144,10 @@ heroImage: http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stud
 
 </div>
 <div class="side-bar" id="new_content_container_1767369">
-    <p class="flex"><a class="button" href="http://education.unimelb.edu.au/contact_us/enquiry-forms/enquiry-evaluation">Have an enquiry?</a> <a class="download button" href="">Course brochure (106kb PDF)</a></p>
-    <div class="well">
-        <figure><img src="http://education.unimelb.edu.au/__data/assets/image/0004/1488604/Evaluation_Trish-OConnor_cropped.jpg" alt="Trish, Master of Evalutaion Student" /></figure>
-        <blockquote>
-            <p>With a passion for evaluation, I jumped at the chance to get a formal qualification in this field. It provided me with a solid grounding in the theories and best practice underpinning what we do in evaluation. This course allowed me to develop my skillset as an evaluator and make valuable linkages to a network of like-minded practitioners.</p>
-            <footer>
-                <cite>Dr Trish O'Connor<br />Senior Consultant with Australian Healthcare Associates (AHA) and Master of Evaluation graduate</cite>
-            </footer>
-        </blockquote>
+    <p class="course-ctas"><a class="button" href="http://education.unimelb.edu.au/contact_us/enquiry-forms/enquiry-evaluation">Have an enquiry?</a> <a class="download button" href="">Course brochure (106kb PDF)</a></p>
+    <div class="alert">
+        <p>Thinking about applying for the 2016 mid-year intake? Join us for our Meet the Academic event</p>
+        <a class="button--go" href="">Meet the Academic</a>
     </div>
     <div class="well">
         <h2>
@@ -207,6 +203,15 @@ heroImage: http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stud
         <p>Learn more about <a href="http://education.unimelb.edu.au/study_with_us/scholarships_and_financial_support">Financial support</a></p>
     </div>
     <div class="well">
+        <figure><img src="http://education.unimelb.edu.au/__data/assets/image/0004/1488604/Evaluation_Trish-OConnor_cropped.jpg" alt="Trish, Master of Evalutaion Student" /></figure>
+        <blockquote>
+            <p>With a passion for evaluation, I jumped at the chance to get a formal qualification in this field. It provided me with a solid grounding in the theories and best practice underpinning what we do in evaluation. This course allowed me to develop my skillset as an evaluator and make valuable linkages to a network of like-minded practitioners.</p>
+            <footer>
+                <cite>Dr Trish O'Connor<br />Senior Consultant with Australian Healthcare Associates (AHA) and Master of Evaluation graduate</cite>
+            </footer>
+        </blockquote>
+    </div>
+    <div class="well">
         <h2>Related courses</h2>
         <strong>You may also be interested in:</strong>
         <ul>
@@ -218,7 +223,4 @@ heroImage: http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stud
             </li>
         </ul>
     </div>
-    <p><a class="button--go" href="http://education.unimelb.edu.au/news_and_activities/events/meet-the-academic">Meet the academic?</a></p>
-
-
 </div>
