--- a/study-with-us/courses/index.html
+++ b/study-with-us/courses/index.html
@@ -21,12 +21,13 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
         <div class="left">
             <h2>Become a teacher</h2>
             <p>Courses to become a teacher in Early Childhood, Primary and Secondary settings.</p>
-            <a class="button" href="../become-a-teacher.html">Learn more</a>
+            <a class="button" href="become-a-teacher.html">Learn more</a>
         </div>
         <div class="right">
             <ul class="course-list">
                 <li>
-                    <a href="./?a=602581" data-courselevel="master"><small>Master of</small> Teaching <span>(Early Childhood)</span></a>
+                    <a href="early-childhood.html" data-courselevel="master"><small>Master of</small> Teaching <span>(Early Childhood)</span></a>
+                    <!--<a href="./?a=602581" data-courselevel="master"><small>Master of</small> Teaching <span>(Early Childhood)</span></a>-->
                 </li>
                 <li>
                     <a href="./?a=610514" data-courselevel="master"><small>Master of</small> Teaching <span>(Primary)</span></a>
@@ -240,10 +241,12 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
         <div class="right">
             <ul class="course-list">
                 <li>
-                    <a href="./?a=619047" data-courselevel="master" data-research="yes"><small>Master of</small> Evaluation</a>
+                    <a href="evaluation.html" data-courselevel="master" data-research="yes"><small>Master of</small> Evaluation</a>
+                    <!--<a href="./?a=619047" data-courselevel="master" data-research="yes"><small>Master of</small> Evaluation</a>-->
                 </li>
                 <li>
-                    <a href="./?a=619047" data-courselevel="gradcert"><small>Graduate Certificate in</small> Evaluation</a>
+                    <a href="evaluation.html" data-courselevel="gradcert"><small>Graduate Certificate in</small> Evaluation</a>
+                    <!--<a href="./?a=619047" data-courselevel="gradcert"><small>Graduate Certificate in</small> Evaluation</a>-->
                 </li>
             </ul>
         </div>
