style guide updates

--- a/style-guide/style-guide-typography.html
+++ b/style-guide/style-guide-typography.html
@@ -8,7 +8,16 @@ bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/queenberry_floor_landingLive.jpg
 ---
 
-{%include  style-guide-nav.html %}
+<h2 class="style-guide">Typeface</h2>
+
+<p>Headings and body copy use <a href="https://www.fonts.com/font/linotype/univers/45-light">Linotype Univers</a> for the typeface, according to the <a href="https://staff.unimelb.edu.au/education/documents/marketing_brandguidelines/Identity_Guide_3_2.pdf">MGSE Identity Guide</a>.</p>
+<h3 class="style-guide">Font stack</h3>
+<pre>
+  <code>
+font-family: &quot;Univers W01&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; // body copy
+font-family: &quot;Univers W01&quot;, Helvetica, Arial, sans-serif; // headings
+  </code>
+</pre>
 
 <h2 class="style-guide">Headings</h2>
 <div class="article">
@@ -29,6 +38,10 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
     <h6>Heading 6</h6>
   </div>
 </div>
+
+<p>Heading 1 <code>&lt;h1&gt;</code> should only be used once on the page for the main heading. The CMS will automatically include the <code>&lt;h1&gt;</code>.</p>
+
+<p>Headings are used to section content of a page. Always start with <code>&lt;h2&gt;</code> for main sections, then use <code>&lt;h3&gt;</code> for sub-sections, etc. Never skip a heading level.</p>
 
 <h2 class="style-guide">Paragraph</h2>
 
