--- a/study-with-us/courses/become-a-teacher.html
+++ b/study-with-us/courses/become-a-teacher.html
@@ -50,43 +50,44 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
 </div>
 
 <div class="courses highlight">
-    <section class="theme clearfix">
-        <div class="left">
-            <h2>Courses to become a teacher</h2>
-        </div>
-        <div class="right">
-            <ul class="course-list extra">
-                <li>
-                    <a href="./?a=602581" data-courselevel="master">
-                        <img src="/img/early-chldhood.jpg" alt="">    
-                        <small>Master of</small> Teaching <span>(Early Childhood)</span>
-                        <p>The course covers children aged 0-8 years, reflecting the Victorian Government's early childhood strategy.</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./?a=610514" data-courselevel="master">
-                        <img src="/img/primary.jpg" alt="">
-                        <small>Master of</small> Teaching <span>(Primary)</span>
-                        <p>Will qualify you to teach across all primary years as a generalist teacher, with specialist knowledge in literacy and numeracy education.</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./?a=610637" data-courselevel="master">
-                        <img src="/img/secondary.jpg" alt="">
-                        <small>Master of</small> Teaching <span>(Secondary)</span>
-                        <p>Prepares you to be a highly effective teacher in your discipline.</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="./?a=1101866" data-courselevel="master">
-                        <img src="/img/internship.jpg" alt="">
-                        <small>Master of</small> Teaching <span>(Internship)</span>
-                        <p>In the Master of Teaching (Secondary) Internship you get paid to teach in a secondary school while completing your teaching degree.</p>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </section>
+    <h2>Master of Teaching courses</h2>
+    <ul class="course-list extra">
+        <li>
+            <a href="./?a=602581" data-courselevel="master">
+                <img src="/img/early-chldhood.jpg" alt="">    
+                <small>Master of</small> Teaching <span>(Early Childhood)</span>
+                <p>The course covers children aged 0-8 years, reflecting the Victorian Government's early childhood strategy.</p>
+            </a>
+        </li>
+        <li>
+            <a href="./?a=610514" data-courselevel="master">
+                <img src="/img/primary.jpg" alt="">
+                <small>Master of</small> Teaching <span>(Primary)</span>
+                <p>Will qualify you to teach across all primary years as a generalist teacher, with specialist knowledge in literacy and numeracy education.</p>
+            </a>
+        </li>
+        <li>
+            <a href="http://education.unimelb.edu.au/study_with_us/courses/early-childhood-and-primary" data-courselevel="master">
+                <img src="http://education.unimelb.edu.au/__data/assets/image/0011/2085833/varieties/300x123px.jpg" alt="An early childhood and primary teacher talking to a student">
+                <small>Master of</small> Teaching <span>(Early Childhood and Primary)</span>
+                <p>Prepares you for dual registration to teach in early childhood education and across all primary years as a generalist teacher.</p>
+            </a>
+        </li>
+        <li>
+            <a href="./?a=610637" data-courselevel="master">
+                <img src="/img/secondary.jpg" alt="">
+                <small>Master of</small> Teaching <span>(Secondary)</span>
+                <p>Prepares you to be a highly effective teacher in your discipline.</p>
+            </a>
+        </li>
+        <li>
+            <a href="./?a=1101866" data-courselevel="master">
+                <img src="/img/internship.jpg" alt="">
+                <small>Master of</small> Teaching <span>(Internship)</span>
+                <p>In the Master of Teaching (Secondary) Internship you get paid to teach in a secondary school while completing your teaching degree.</p>
+            </a>
+        </li>
+    </ul>
 </div>
 <hr>
 
