fix vertical preview headings

--- a/style-guide/style-guide-navigation.html
+++ b/style-guide/style-guide-navigation.html
@@ -73,7 +73,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
 
 <div class="article">
     <div class="preview-vertical">
-        <h2>More about YRC</h2>
+        <h2 class="group-heading">More about YRC</h2>
         <div>
             <img src="http://placehold.it/185x185">
             <h3><a href="#">Experts</a></h3>
