Revert "Merge remote-tracking branch 'origin/master'"
# Conflicts:
#	_includes/main-nav.html
#	_sass/_courses.scss
#	_sass/_mgse-components.scss
#	js/main.js
#	news-and-activities/news_archive.html
#	study-with-us/courses/index.html

--- a/study-with-us/become-a-teacher.html
+++ b/study-with-us/become-a-teacher.html
@@ -20,13 +20,11 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
     <p>Our unique partnership model with schools means you will spend significantly more time in schools with an unprecedented amount of support.</p>
     <p><a href="">Learn more about our Clinical teaching model</a>.</p>
     
-    <!--
     <figure class="video centered extra-vspace">
         <div class="videoWrapper">
             <iframe width="560" height="315" src="http://www.youtube.com/embed/uGOFPfGX3SU?rel=0" frameborder="0" allowfullscreen=""></iframe>
         </div>
     </figure>
-    -->
 
 </div>
 <div class="side-bar">
@@ -39,56 +37,51 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
         </figure>
         <p><b>We are Australia’s number one and among the world’s finest for Education</b> <small>(QS World University Rankings by Subject)</small></p>
     </div>
-    <!--
     <div class="well">
         <h2>International Students</h2>
         <p>We offer a supportive environment for international students and are committed to ensuring our courses and research are relevant in a global context.</p>
         <p>You will enjoy our location on the northern edge of Melbourne's vibrant city centre, which means a host of cafés, restaurants, shops, theatres, galleries and bars are just a short walk away.</p>
         <p>Your connection to MGSE doesn’t end on graduation day. Our global alumni network is an important part of our work and a key to future career opportunities.</p>
     </div>
-    -->
 </div>
 
-<div class="courses highlight">
-    <h2>Master of Teaching courses</h2>
-    <ul class="course-list extra">
-        <li>
-            <a href="./?a=602581" data-courselevel="master">
-                <img src="/img/early-chldhood.jpg" alt="">    
-                <small>Master of</small> Teaching <span>(Early Childhood)</span>
-                <p>The course covers children aged 0-8 years, reflecting the Victorian Government's early childhood strategy.</p>
-            </a>
-        </li>
-        <li>
-            <a href="./?a=610514" data-courselevel="master">
-                <img src="/img/primary.jpg" alt="">
-                <small>Master of</small> Teaching <span>(Primary)</span>
-                <p>Will qualify you to teach across all primary years as a generalist teacher, with specialist knowledge in literacy and numeracy education.</p>
-            </a>
-        </li>
-        <li>
-            <a href="http://education.unimelb.edu.au/study_with_us/courses/early-childhood-and-primary" data-courselevel="master">
-                <img src="http://education.unimelb.edu.au/__data/assets/image/0011/2085833/varieties/300x123px.jpg" alt="An early childhood and primary teacher talking to a student">
-                <small>Master of</small> Teaching <span>(Early Childhood and Primary)</span>
-                <p>Prepares you for dual registration to teach in early childhood education and across all primary years as a generalist teacher.</p>
-            </a>
-        </li>
-        <li>
-            <a href="./?a=610637" data-courselevel="master">
-                <img src="/img/secondary.jpg" alt="">
-                <small>Master of</small> Teaching <span>(Secondary)</span>
-                <p>Prepares you to be a highly effective teacher in your discipline.</p>
-            </a>
-        </li>
-        <li>
-            <a href="./?a=1101866" data-courselevel="master">
-                <img src="/img/internship.jpg" alt="">
-                <small>Master of</small> Teaching <span>(Internship)</span>
-                <p>In the Master of Teaching (Secondary) Internship you get paid to teach in a secondary school while completing your teaching degree.</p>
-            </a>
-        </li>
-    </ul>
-</div>
+<section class="theme clearfix">
+    <div class="left">
+        <h2>Courses to become a teacher</h2>
+    </div>
+    <div class="right">
+        <ul class="course-list extra">
+            <li>
+                <a href="./?a=602581" data-courselevel="master">
+                    <img src="/img/early-chldhood.jpg" alt="">    
+                    <small>Master of</small> Teaching <span>(Early Childhood)</span>
+                    <p>The course covers children aged 0-8 years, reflecting the Victorian Government's early childhood strategy.</p>
+                </a>
+            </li>
+            <li>
+                <a href="./?a=610514" data-courselevel="master">
+                    <img src="/img/primary.jpg" alt="">
+                    <small>Master of</small> Teaching <span>(Primary)</span>
+                    <p>Will qualify you to teach across all primary years as a generalist teacher, with specialist knowledge in literacy and numeracy education.</p>
+                </a>
+            </li>
+            <li>
+                <a href="./?a=610637" data-courselevel="master">
+                    <img src="/img/secondary.jpg" alt="">
+                    <small>Master of</small> Teaching <span>(Secondary)</span>
+                    <p>Prepares you to be a highly effective teacher in your discipline.</p>
+                </a>
+            </li>
+            <li>
+                <a href="./?a=1101866" data-courselevel="master">
+                    <img src="/img/internship.jpg" alt="">
+                    <small>Master of</small> Teaching <span>(Internship)</span>
+                    <p>In the Master of Teaching (Secondary) Internship you get paid to teach in a secondary school while completing your teaching degree.</p>
+                </a>
+            </li>
+        </ul>
+    </div>
+</section>
 <hr>
 
 <div class="article">
