--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -9,4 +9,4 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
 
 ---
 
-<p>This website style guide is in place to ensure brand identity, professionalism and consistency across the MGSE website. The style guide includes basic design principles for creating web sites including the different components and typography.</p>
+{%include  style-guide-nav.html %}
