--- a/style-guide/style-guide-components.html
+++ b/style-guide/style-guide-components.html
@@ -8,6 +8,8 @@ bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/queenberry_floor_landingLive.jpg
 ---
 
+{%include  style-guide-nav.html %}
+
 <p style="max-width: 100%;"><a href="#buttons">Buttons</a> |
 <a href="#tables">Tables</a> |
 <a href="#images">Images</a> |
@@ -23,7 +25,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
 <h2 id="buttons" class="style-guide">Buttons</h2>
 
 <a class="button" href="">Basic button</a>
-<a class="button-go" href="">Call to action button</a>
+<a class="button--go" href="">Call to action button</a>
 
 <h3 class="style-guide">How to use</h3>
 <div>
@@ -31,7 +33,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
         <h4>Code</h4>
         <code>
 &lt;a class=&quot;button&quot; href=&quot;URL&quot;&gt;Basic button&lt;/a&gt;
-&lt;a class=&quot;button-go&quot; href=&quot;URL&quot;&gt;Call to action button&lt;/a&gt;
+&lt;a class=&quot;button--go&quot; href=&quot;URL&quot;&gt;Call to action button&lt;/a&gt;
         </code>
     </pre>
 </div>
