--- a/style-guide/style-guide-navigation.html
+++ b/style-guide/style-guide-navigation.html
@@ -8,6 +8,8 @@ bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/queenberry_floor_landingLive.jpg
 ---
 
+{%include  style-guide-nav.html %}
+
 <h2 class="style-guide">Breadcrumbs</h2>
 
 <div role="navigation" class="breadcrumbs">
@@ -73,7 +75,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
 
 <div class="article">
     <div class="preview-vertical">
-        <h2 class="group-heading">More about YRC</h2>
+        <h2>More about YRC</h2>
         <div>
             <img src="http://placehold.it/185x185">
             <h3><a href="#">Experts</a></h3>
