--- a/home-page-2016.html
+++ b/home-page-2016.html
@@ -172,6 +172,19 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
                     <a href="http://education.unimelb.edu.au/news_and_activities/projects/focus_on_learners_education_experts_to_government" class="explore">Explore</a>
                 </footer>
             </div>
+            
+            <div class="project card">
+                <header>
+                    <img src="http://education.unimelb.edu.au/__data/assets/image/0007/1768417/focusing-on-learner.jpg" alt="">
+                </header>
+                <div class="card-main">
+                    <h2>Focusing on the learner: Charting a way forward for Australian education</h2>
+                    <p>Australia’s current education policies will not address its slipping international rankings, according to a paper from the University of Melbourne’s Graduate School of Education.</p>
+                </div>
+                <footer>
+                    <a href="http://education.unimelb.edu.au/news_and_activities/projects/focus_on_learners_education_experts_to_government" class="explore">Explore</a>
+                </footer>
+            </div>
 
 
         </div>
@@ -196,13 +209,13 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
                 </div>
                 <p class="cta"><a href="">Apply now</a></p>
             </div>
-            <div class="promo-links">
-                <ul>
-                    <li><a href="">New scholarships for Research degrees</a></li>
-                    <li><a href="">Explore our Breadth subjects</a></li>
-                    <li><a href="">Courses</a></li>
-                    <li><a href="">Become a Teacher</a></li>
-                </ul>
+            <div class="promo">
+                <img src="/img/promo.jpg" alt="">
+                <div class="text">
+                    <h3>Start your teaching career three years before you graduate</h3>
+                    <p>Master of Teaching (Secondary) Internship</p>
+                </div>
+                <p class="cta"><a href="">Apply now</a></p>
             </div>
         </div>
     </div>
