--- a/home-page-2016.html
+++ b/home-page-2016.html
@@ -25,33 +25,84 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
     <div class="content-wrapper">
         <h2>Study with us</h2>
         <div class="promos">
-            <div class="double promo" style="background-image: url(/img/double-promo.jpg);">
+            <div class="double promotion card" style="background-image: url(/img/double-promo.jpg);">
                 <a href="">
-                    <div class="text">
+                    <div class="card-main">
                         <h3>Open day</h3>
                         <p>Sunday 21August 2016</p>
                     </div>
                     <p class="cta">Register now</p>
                 </a>
             </div>
-            <div class="promo">
+            <div class="promotion card">
                 <a href="">
                     <header>
                         <img src="/img/promo.jpg" alt="">
                     </header>
-                    <div class="text">
+                    <div class="card-main">
                         <h3>Start your teaching career three years before you graduate</h3>
                         <p>Master of Teaching (Secondary) Internship</p>
                     </div>
                     <p class="cta">Apply now</p>
                 </a>
             </div>
-            <div class="promo-links">
+            <div class="promotion-links">
                 <ul>
-                    <li><a href="">New scholarships for Research degrees</a></li>
-                    <li><a href="">Explore our Breadth subjects</a></li>
-                    <li><a href="">Courses</a></li>
-                    <li><a href="">Become a Teacher</a></li>
+                    <li><a href=""><span>New scholarships for Research degrees</span></a></li>
+                    <li><a href=""><span>Explore our Breadth subjects</span></a></li>
+                    <li><a href=""><span>Courses</span></a></li>
+                    <li><a href=""><span>Become a Teacher</span></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="content-wrapper">
+        <h2>Study with us</h2>
+        <div class="promos">
+            <div class="promotion card">
+                <a href="">
+                    <header>
+                        <img src="/img/promo.jpg" alt="">
+                    </header>
+                    <div class="card-main">
+                        <h3>Start your teaching career three years before you graduate</h3>
+                        <p>Master of Teaching (Secondary) Internship</p>
+                    </div>
+                    <p class="cta">Apply now</p>
+                </a>
+            </div>
+            <div class="promotion card">
+                <a href="">
+                    <header>
+                        <img src="/img/promo.jpg" alt="">
+                    </header>
+                    <div class="card-main">
+                        <h3>Start your teaching career three years before you graduate</h3>
+                        <p>Master of Teaching (Secondary) Internship</p>
+                    </div>
+                    <p class="cta">Apply now</p>
+                </a>
+            </div>
+            <div class="promotion card">
+                <a href="">
+                    <header>
+                        <img src="/img/promo.jpg" alt="">
+                    </header>
+                    <div class="card-main">
+                        <h3>Start your teaching career three years before you graduate</h3>
+                        <p>Master of Teaching (Secondary) Internship</p>
+                    </div>
+                    <p class="cta">Apply now</p>
+                </a>
+            </div>
+            <div class="promotion-links">
+                <ul>
+                    <li><a href=""><span>New scholarships for Research degrees</span></a></li>
+                    <li><a href=""><span>Explore our Breadth subjects</span></a></li>
+                    <li><a href=""><span>Courses</span></a></li>
+                    <li><a href=""><span>Become a Teacher</span></a></li>
                 </ul>
             </div>
         </div>
@@ -216,33 +267,33 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
     <div class="content-wrapper">
         <h2>Get involved</h2>
         <div class="promos">
-            <div class="double promo" style="background-image: url(/img/double-promo.jpg);">
+            <div class="double promotion card" style="background-image: url(/img/double-promo.jpg);">
                 <a href="">
-                    <div class="text">
+                    <div class="card-main">
                         <h3>Join our network of schools</h3>
                         <p>Breakfast information session, Tuesday 30 August 2016</p>
                     </div>
                     <p class="cta">Register now</p>
                 </a>
             </div>
-            <div class="promo">
+            <div class="promotion card">
                 <a href="">
                     <header>
                         <img src="/img/promo.jpg" alt="">
                     </header>
-                    <div class="text">
+                    <div class="card-main">
                         <h3>Internship schools</h3>
                         <p>Employ interns in your schools</p>
                     </div>
                     <p class="cta">Learn more</p>
                 </a>
             </div>
-            <div class="promo">
+            <div class="promotion card">
                 <a href="">
                     <header>
-                        <img src="/img/promo.jpg" alt="">
+                        <img src="/img/support-us.jpg" alt="">
                     </header>
-                    <div class="text">
+                    <div class="card-main">
                         <h3>Suppport us</h3>
                         <p>Help us deliver the future for Melbourne to which we all aspire</p>
                     </div>
