--- a/home-page-2016.html
+++ b/home-page-2016.html
@@ -85,16 +85,17 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
                     <p class="cta">Apply now</p>
                 </a>
             </div>
-            <div class="promotion card">
+            <div class="testimonial promotion card">
                 <a href="">
                     <header>
-                        <img src="/img/promo.jpg" alt="">
+                        <img src="/img/testimonial.jpg" alt="">
                     </header>
                     <div class="card-main">
-                        <h3>Start your teaching career three years before you graduate</h3>
-                        <p>Master of Teaching (Secondary) Internship</p>
+                        <blockquote>
+                            <p>The academics teaching this course are undoubtedly some of the best in the field.</p>
+                            <footer><cite>Marijke van Beuge<br><span>Master of Teaching (Early Childhood)</span> graduate</cite></footer>
+                        </blockquote>
                     </div>
-                    <p class="cta">Apply now</p>
                 </a>
             </div>
             <div class="promotion-links">
@@ -269,7 +270,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
         <div class="promos">
             <div class="double promotion card" style="background-image: url(/img/double-promo.jpg);">
                 <a href="">
-                    <div class="card-main">
+                    <div class="card-main left-align">
                         <h3>Join our network of schools</h3>
                         <p>Breakfast information session, Tuesday 30 August 2016</p>
                     </div>
